Адаптировал модальные окна, сжал изображения

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
           stroke-width="39"
         />
       </svg>
-
-      @include('partials/header.html') @include('partials/menu.html')
+      @include('partials/modal.html') @include('partials/header.html')
+      @include('partials/menu.html')
       <main class="main">
         <?xml version="1.0" standalone="no"?>
         <svg
