--- a/src/page-about.html
+++ b/src/page-about.html
@@ -4,7 +4,8 @@
 
   <body class="page__body">
     <div class="site-container">
-      @include('partials/header.html') @include('partials/menu.html')
+      @include('partials/modal.html') @include('partials/header.html')
+      @include('partials/menu.html')
       <main class="main">
         @include('partials/about-company.html')
         @include('partials/about-grid.html')
