--- a/src/page-news-single.html
+++ b/src/page-news-single.html
@@ -4,6 +4,7 @@
 
   <body class="page__body">
     <div class="site-container">
+      @include('partials/modal.html')
       @include('partials/header.html') @include('partials/menu.html')
       <main class="main">
         @include('partials/news-single.html') @include('partials/news.html')
