Перенес почти весь svg код в отдельный файл

--- a/src/page-about.html
+++ b/src/page-about.html
@@ -7,7 +7,7 @@
       @include('partials/modal.html') @include('partials/header.html')
       @include('partials/menu.html')
       <main class="main">
-        @include('partials/about-company.html')
+        @include('partials/sprite.html') @include('partials/about-company.html')
         @include('partials/about-grid.html')
         @include('partials/about-history.html') @include('partials/news.html')
       </main>
