--- a/src/page-export.html
+++ b/src/page-export.html
@@ -4,8 +4,8 @@
 
   <body class="page__body">
     <div class="site-container">
-      @include('partials/modal.html') @include('partials/header.html')
-      @include('partials/menu.html')
+      @include('partials/sprite.html') @include('partials/modal.html')
+      @include('partials/header.html') @include('partials/menu.html')
       <main class="main">@include('partials/export.html')</main>
       @include('partials/footer.html')
     </div>
