--- a/src/page-mission.html
+++ b/src/page-mission.html
@@ -4,7 +4,7 @@
 
   <body class="page__body">
     <div class="site-container">
-      @include('partials/modal.html')
+      @include('partials/sprite.html') @include('partials/modal.html')
       @include('partials/header.html') @include('partials/menu.html')
       <main class="main">
         @include('partials/mission.html') @include('partials/strategy.html')
