--- a/src/page-news.html
+++ b/src/page-news.html
@@ -4,7 +4,7 @@
 
   <body class="page__body">
     <div class="site-container">
-      @include('partials/modal.html')
+      @include('partials/sprite.html') @include('partials/modal.html')
       @include('partials/header.html') @include('partials/menu.html')
       <main class="main">@include('partials/press-center.html')</main>
       @include('partials/footer.html')
