Подвел страницы главная, о нас, наша миссия под pixel perfect

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,25 @@
 
   <body class="page__body">
     <div class="site-container">
-      <svg class="pipe">
-        <use xlink:href="#pipe"></use>
+      <svg class="pipe" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1233 0V780C1233 835.228 1188.23 880 1133 880L630.75 880L128.5 880C73.2715 880 28.5 924.771 28.5 980V1841C28.5 1896.23 73.2715 1941 128.5 1941L1402 1941C1457.23 1941 1502 1985.77 1502 2041L1502 3140C1502 3195.23 1457.23 3240 1402 3240H127.5C72.2715 3240 27.5 3284.77 27.5 3340V4157.5C27.5 4212.73 72.2715 4257.5 127.5 4257.5H1496.5C1550.62 4257.5 1594.5 4301.38 1594.5 4355.5V4355.5"
+          stroke="#DE1829"
+          stroke-width="54"
+        />
       </svg>
 
-      <svg class="pipe-mobile">
-        <use xlink:href="#pipe-mobile"></use>
+      <svg
+        class="pipe-mobile"
+        viewBox="0 0 633 6971"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M537.988 -3.30075e-06L537.988 895C537.988 919.853 517.841 940 492.988 940L81.4873 940C56.6345 940 36.4873 960.147 36.4873 985L36.4873 1978L581.489 2109L581.499 5621.5C581.499 5646.35 561.352 5666.5 536.499 5666.5L75.4015 5666.5C50.7834 5666.5 30.7348 5686.28 30.4055 5710.9L19.6099 6517.9C19.2743 6542.98 39.558 6563.5 64.6463 6563.5C250.382 6563.5 371.602 6563.5 557.786 6563.5C582.121 6563.5 602.072 6582.85 602.791 6607.17L613.5 6969.5"
+          stroke="#DE1829"
+          stroke-width="39"
+        />
       </svg>
       @include('partials/sprite.html') @include('partials/modal.html')
       @include('partials/header.html') @include('partials/menu.html')
